Exercise1_13/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      securityContext:
        fsGroup: 2000
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: backend
          image: vuolahti/backend:02
          volumeMounts:
          - name: shared-image
            mountPath: /tmp/kube
